2004-11-27  Satoru Takabayashi  <satoru@namazu.org>

	* migemo (segment): Modify the regex.

	* migemo.rb.in (String::to_katakana): Remove unnecessary \\1 in the
	regex. 

	* migemo.rb.in (String::quotemeta): Removed.
	(String): Use Regexp.quote
	* migemo-regex.rb
	(MigemoRegex::RegexEmacsRenderer::escape_string): Ditto. 
	(MigemoRegex::RegexRenderer::insert): Ditto.

	* migemo-regex.rb (MigemoRegex::RegexCompiler::push): Prevent
	adding an empty string.
	(MigemoRegex::RegexCompiler::optimize1): Use Regexp.quote and fix
	the regex creation bug. (preceding ^ is required)

2004-10-12  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-accept-process-output-timeout-msec): New
	variable.
	(migemo-get-pattern): Use
	`migemo-accept-process-output-timeout-msec'.
	- Thanks to URA Takefumi's for the suggestion.

2004-10-06  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-isearch-toggle-migemo): Refresh
	lazy-highlight.
	- Thanks to Masayuki FUJII's for the suggestion.

2004-08-02  Satoru Takabayashi  <satoru@namazu.org>

	* ChangeLog: Obfuscate email addresses to prevent spams.

2004-06-13  Satoru Takabayashi  <satoru@namazu.org>

	* migemo (segment): Refine the pattern.

	* migemo.el.in (migemo-replace-in-string): Simplified for performance.
	(migemo-get-pattern): Adopt the change of migemo-replace-in-string.
	(migemo-if): Removed.

	* configure.in: Bumped version number to 0.41.

2004-06-10  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* migemo.el.in (isearch-highlightify-region): Check
	`migemo-isearch-enable-p'.

2004-02-10  Satoru Takabayashi  <satoru@namazu.org>

	* acinclude.m4 (AM_PATH_RUBYDIR): Use Config::CONFIG["sitelibdir"]
	instead of Config::CONFIG["sitedir"].

2004-02-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* migemo.el.in (migemo-poor-emacs): Remove variable.
	(migemo-replace-in-string): Remove debug routine.
	(migemo-get-pattern, migemo-frequent-pattern-make): Associated
	value of `migemo-frequent-pattern-alist' and