@@ -1,7 +1,7 @@
 ;; -*- mode: Emacs-Lisp; coding: euc-jp-unix -*-
 ;;; migemo.el - Japanese incremental search trough dynamic pattern expansion
 
-;; $Id: migemo.el.in,v 1.5 2004/10/12 03:30:33 shirai Exp $
+;; $Id: migemo.el.in,v 1.6 2005/02/25 03:52:34 shirai Exp $
 ;; Copyright (C) Satoru Takabayashi
 
 ;; Author: Satoru Takabayashi <satoru-t@is.aist-nara.ac.jp>
@@ -632,7 +632,10 @@ This function used with Megemo feature."
       (setq migemo-isearch-enable-p (not migemo-isearch-enable-p)))
     (when (fboundp 'isearch-lazy-highlight-new-loop)
       (let ((isearch-lazy-highlight-last-string nil))
-	(isearch-lazy-highlight-new-loop)))
+	(condition-case nil
+	    (isearch-lazy-highlight-new-loop)
+	  (error
+	   (isearch-lazy-highlight-new-loop nil nil)))))
     (isearch-message))
 
   (defun migemo-isearch-yank-char ()
